# aoc_tiles

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  update-readme.yml
aoc_tiles/: animations.py  cli.py  colors.py  config.py  drawer.py  fonts.py  html.py  leaderboard.py  make_tiles.py  solutions.py  themes.py  tiles.py
aoc_tiles/resources/: github_languages.yaml
tests/samples/year_day_day.kt/: README.md
