[project]
name = "aoc-tiles"
dynamic = ["version"]
description = "Fancy Advent of Code README tiles showing the completion status of the challenges per day"
authors = [{ name = "Brutenis Gliwa,", email = "brutenis@gmail.com" }]
requires-python = ">=3.8"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "pillow>=10.1.0,<11",
    "requests>=2.31.0,<3",
    "pyyaml>=6.0.1,<7",
    "rich>=13.7.0,<14",
    "gitpython>=3.1.40,<4",
    "loguru>=0.7.2,<0.8",
]

[project.scripts]
aoc-tiles = "aoc_tiles.cli:main"
aoctiles = "aoc_tiles.cli:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
dirty = true
